# libcpr

./: .gitignore  .travis.yml  Makefile.am  README.md  README.rst  TODO  configure.ac  configure.sh  wercker.yml
doc/: .gitignore  Makefile.am  cprime.7  cprime.texi  libcprime.3
doc/doxygen/: .gitignore  Doxyfile  mainpage.h
doc/examples/: .gitignore  Makefile  list.c  list_iter.c  map.c  set.c  sizeof.c  string.c  vector.c
doc/manual/: Makefile  abi.rst  api.rst  classes.rst  concepts.rst  conf.py  contrib.rst  design.rst  faq.rst  glossary.rst  headers.rst  index.rst  install.rst  installation.rst  interfaces.rst  intro.rst  license.rst  macros.rst  notes.rst  ref.rst  usage.rst  utilities.rst  xref.rst
doc/manual/.extensions/: c_header.py  cpr.py  doxygen.py
doc/manual/.themes/: CREDITS
doc/manual/.themes/drymanual/: breadcrumbs.html  footer.html  layout.html  theme.conf  versions.html
doc/manual/api/: error.rst  feature.rst  generic.rst  index.rst  list.rst  map.rst  module.rst  set.rst  string.rst  unsafe.rst  vector.rst  version.rst
doc/manual/api/error/: cpr_error_trigger.rst
doc/manual/api/feature/: cpr_feature_exists.rst
doc/manual/api/list/: cpr_list_alloc.rst  cpr_list_free.rst  cpr_list_sizeof.rst  cpr_list_t.rst
doc/manual/api/map/: cpr_map_alloc.rst  cpr_map_free.rst  cpr_map_sizeof.rst  cpr_map_t.rst
doc/manual/api/module/: cpr_module_exists.rst
doc/manual/api/set/: cpr_set_alloc.rst  cpr_set_free.rst  cpr_set_sizeof.rst  cpr_set_t.rst
doc/manual/api/string/: cpr_string.rst  cpr_string_alloc.rst  cpr_string_capacity.rst  cpr_string_empty.rst  cpr_string_free.rst  cpr_string_length.rst  cpr_string_max_size.rst  cpr_string_npos.rst  cpr_string_size.rst  cpr_string_sizeof.rst  cpr_string_t.rst
doc/manual/api/unsafe/: cpr_list_alloca.rst  cpr_map_alloca.rst  cpr_set_alloca.rst  cpr_string_alloca.rst  cpr_vector_alloca.rst
doc/manual/api/vector/: cpr_vector.rst  cpr_vector_alloc.rst  cpr_vector_at.rst  cpr_vector_back.rst  cpr_vector_capacity.rst  cpr_vector_clear.rst  cpr_vector_data.rst  cpr_vector_dispose.rst  cpr_vector_empty.rst  cpr_vector_free.rst  cpr_vector_front.rst  cpr_vector_init.rst  cpr_vector_init_with_capacity.rst  cpr_vector_pop_back.rst  cpr_vector_push_back.rst  cpr_vector_reserve.rst  cpr_vector_size.rst  cpr_vector_sizeof.rst  cpr_vector_t.rst
doc/manual/api/version/: cpr_version_string.rst
doc/manual/classes/: list.rst  map.rst  set.rst  string.rst  vector.rst
doc/manual/contrib/: bugs.rst  donations.rst  patches.rst  style.rst
doc/manual/design/: emplace.rst  errors.rst  iterators.rst  layout.rst  memory.rst  modules.rst  naming.rst  philosophy.rst
doc/manual/faq/: general.rst  install.rst  technical.rst
doc/manual/headers/: feature.rst  list.rst  map.rst  module.rst  set.rst  string.rst  unsafe.rst  vector.rst  version.rst
doc/manual/install/: config.rst  darwin.rst  freebsd.rst  linux.rst  mingw.rst
doc/manual/interfaces/: map.rst  seq.rst  set.rst
doc/manual/man/: libcpr.rst
doc/manual/ref/: index.rst  list.rst  set.rst  unsafe.rst
doc/manual/utilities/: regex.rst  str.rst  utf8.rst  uuid.rst
doc/manual/xref/: bstrlib.rst  cxx11.rst  glib2.rst
drymanual/: layout.html  searchbox.html  theme.conf  versions.html
etc/: doap.rdf
etc/coverity/: model.cc
etc/homebrew/: .gitignore  libcpr.rb
etc/macports/: .gitignore
etc/macports/devel/libcpr/: Portfile
ffi/: libcpr.rb
ffi/python/: libcpr.py
ffi/ruby/: libcpr.rb
src/: .gitignore  Makefile.am  ascii.c  ascii.h  atom.h  atomic.c  atomic.h  base64.c  base64.h  bool.c  bool.h  box.c  box.h  build.h  byte.h  char.c  char.h  closure.c  closure.h  cpr.h  cprime.c  cprime.h  cprime.h.in  decimal.c  decimal.h  dir.c  dir.h  file.c  file.h  hash.c  hash.h  integer.c  integer.h  iter.c  iter.h  list.c  list.h  map.c  map.h  map_iter.c  (+43 more)
src/cpr/: .gitignore  Makefile.am  error.cc  error.h  feature.cc  feature.h  generic.h  list.cc  list.h  map.cc  map.h  module.cc  module.h  prelude.h  set.cc  set.h  string.cc  string.h  types.h  unsafe.h  vector.cc  vector.h  version.cc  version.h.in
src/lock/: mutex.c  mutex.h  rwlock.c  rwlock.h  spinlock.c  spinlock.h
src/map/: hash_map.h  hashmap.c  hashmap.h  int_map.h  listmap.c  listmap.h  nullmap.c  nullmap.h  treemap.c  treemap.h
src/seq/: list.c  list.h  nullseq.h  vector.c  vector.h
src/set/: hashset.c  hashset.h  listset.c  listset.h  nullset.c  nullset.h  treeset.c  treeset.h  vectorset.h  vectset.c
test/: .gitignore  Makefile.am  check-error.c  check-feature.c  check-generic.c  check-list.c  check-map.c  check-module.c  check-set.c  check-string.c  check-unsafe.c  check-vector.c  check-version.c  check_char.c  check_dir.c  check_error.c  check_feature.c  check_file.c  check_generic.c  check_hash.c  check_map.c  check_module.c  check_pair.c  check_prelude.c  check_set.c  check_sort.c  check_str.c  check_string.c  check_unsafe.c  check_uri.c  check_utf8.c  check_uuid.c  check_vector.c  check_version.c
